test(unit): atualizar testes unitários e configuração de teste
- Ajustar testes unitários para nova estrutura do projeto
- Atualizar configuração de propriedades de teste

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,22 +1,143 @@
-# Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Test Database Configuration
+app.database.url=jdbc:h2:mem:testdb
+app.database.port=
+app.database.name=testdb
+app.database.username=sa
+app.database.password=
+app.database.driver-class-name=org.h2.Driver
 
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
+# Test Database Connection Pool Configuration
+app.database.pool.initial-size=2
+app.database.pool.max-size=5
+app.database.pool.min-idle=1
+app.database.pool.max-lifetime=300000
+app.database.pool.connection-timeout=10000
+app.database.pool.idle-timeout=300000
+app.database.pool.leak-detection-threshold=60000
+
+# Test JPA Configuration
+app.jpa.hibernate-ddl-auto=create-drop
+app.jpa.dialect=org.hibernate.dialect.H2Dialect
+app.jpa.show-sql=false
+app.jpa.format-sql=false
+app.jpa.use-sql-comments=false
+app.jpa.defer-datasource-initialization=true
+
+# Test JPA Properties
+app.jpa.properties.hibernate-format-sql=false
+app.jpa.properties.hibernate-use-sql-comments=false
+app.jpa.properties.hibernate-jdbc-batch-size=10
+app.jpa.properties.hibernate-order-inserts=true
+app.jpa.properties.hibernate-order-updates=true
+app.jpa.properties.hibernate-batch-versioned-data=true
+app.jpa.properties.hibernate-jdbc-fetch-size=10
+app.jpa.properties.hibernate-default-batch-fetch-size=8
+
+# Test Security Configuration
+app.security.jwt.secret=testSecretKeyForTestingOnly
+app.security.jwt.expiration-ms=3600000
+app.security.jwt.refresh-expiration-ms=7200000
+app.security.jwt.issuer=finance-control-test
+app.security.jwt.audience=finance-control-test-users
+
+# Test CORS Configuration
+app.security.cors.allowed-origins=http://localhost:3000,http://localhost:8080
+app.security.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+app.security.cors.allowed-headers=*
+app.security.cors.allow-credentials=true
+app.security.cors.max-age=3600
+
+# Test Server Configuration
+app.server.port=0
+app.server.context-path=
+app.server.servlet-path=/
+app.server.max-http-header-size=8192
+app.server.max-http-post-size=2097152
+app.server.connection-timeout=10000
+app.server.read-timeout=15000
+app.server.write-timeout=15000
+
+# Test Logging Configuration
+app.logging.level=DEBUG
+app.logging.pattern=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+app.logging.file-path=logs
+app.logging.file-name=finance-control-test.log
+app.logging.error-file-name=finance-control-test-error.log
+app.logging.max-file-size=5242880
+app.logging.max-history=7
+app.logging.queue-size=256
+app.logging.async=false
+
+# Test Flyway Configuration
+app.flyway.enabled=false
+app.flyway.locations=classpath:db/migration
+app.flyway.baseline-on-migrate=false
+app.flyway.baseline-version=0
+app.flyway.validate-on-migrate=false
+app.flyway.out-of-order=false
+app.flyway.clean-disabled=true
+app.flyway.clean-on-validation-error=false
+
+# Test Actuator Configuration
+app.actuator.enabled=false
+app.actuator.endpoints=health
+app.actuator.base-path=/actuator
+app.actuator.expose-health-details=false
+app.actuator.show-details=never
+app.actuator.show-components=never
+
+# Test OpenAPI Configuration
+app.open-api.title=Finance Control API - Test
+app.open-api.description=API for managing personal finances - Test Environment
+app.open-api.version=1.0.0-test
+app.open-api.contact-name=Finance Control Team
+app.open-api.contact-email=test@finance-control.com
+app.open-api.contact-url=https://github.com/LucasSantana-Dev/finance-control
+app.open-api.license-name=MIT License
+app.open-api.license-url=https://opensource.org/licenses/MIT
+app.open-api.server-url=http://localhost:0
+app.open-api.server-description=Test server
+
+# Test Pagination Configuration
+app.pagination.default-page-size=5
+app.pagination.max-page-size=20
+app.pagination.default-sort=id
+app.pagination.default-direction=ASC
+
+# Legacy Spring Boot Properties (for backward compatibility)
+spring.datasource.url=${app.database.url}
+spring.datasource.username=${app.database.username}
+spring.datasource.password=${app.database.password}
+spring.datasource.driver-class-name=${app.database.driver-class-name}
+
+spring.jpa.hibernate.ddl-auto=${app.jpa.hibernate-ddl-auto}
+spring.jpa.properties.hibernate.dialect=${app.jpa.dialect}
+spring.jpa.show-sql=${app.jpa.show-sql}
+spring.jpa.properties.hibernate.format_sql=${app.jpa.properties.hibernate-format-sql}
+spring.jpa.properties.hibernate.use_sql_comments=${app.jpa.properties.hibernate-use-sql-comments}
+spring.jpa.defer-datasource-initialization=${app.jpa.defer-datasource-initialization}
+
+logging.level.root=${app.logging.level}
+logging.level.com.finance_control=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+spring.flyway.enabled=${app.flyway.enabled}
+spring.flyway.locations=${app.flyway.locations}
+
+spring.data.web.pageable.default-page-size=${app.pagination.default-page-size}
+spring.data.web.pageable.max-page-size=${app.pagination.max-page-size}
+
+server.port=${app.server.port}
+server.servlet.context-path=${app.server.context-path}
+
+management.endpoints.web.exposure.include=${app.actuator.endpoints}
+management.endpoint.health.show-details=${app.actuator.expose-health-details}
+management.endpoints.web.base-path=${app.actuator.base-path}
+
+# JWT Configuration (legacy)
+jwt.secret=${app.security.jwt.secret}
+jwt.expiration=${app.security.jwt.expiration-ms}
 
 # Security Configuration (disabled for tests)
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
 management.security.enabled=false
-
-# Flyway Configuration
-spring.flyway.enabled=false
-
-# Logging Configuration
-logging.level.com.finance_control=DEBUG
-logging.level.org.springframework.security=DEBUG
