fix(config): corrigir .gitignore para ignorar gradle-wrapper.jar
- Remover exceção desnecessária para gradle-wrapper.jar
- O arquivo JAR será ignorado pela regra *.jar existente
- Manter apenas gradle-wrapper.properties no controle de versão

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ build/
 # Gradle
 .gradle/
 gradle-app.setting
-!gradle-wrapper.jar
 !gradle-wrapper.properties
 .gradletasknamecache
 
@@ -95,7 +94,7 @@ Thumbs.db
 *.rar
 
 # Gradle Wrapper
-!gradle/wrapper/gradle-wrapper.jar
+# Note: gradle-wrapper.jar is ignored by *.jar rule above
 
 # Virtual machine crash logs
 hs_err_pid*
