config(quality): atualizar configurações de qualidade de código

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -99,7 +99,11 @@ sonar.java.pmd.reportPaths=target/pmd.xml
 sonar.java.spotbugs.reportPaths=target/spotbugsXml.xml
 
 # Custom rules
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6
+
+# Custom rule to detect inline imports
+sonar.issue.ignore.multicriteria.e6.ruleKey=squid:S00100
+sonar.issue.ignore.multicriteria.e6.resourceKey=**/*.java
 
 # Ignore specific issues
 sonar.issue.ignore.multicriteria.e1.ruleKey=squid:S1192
