test(core): update tests for new architecture
- Remove obsolete test configurations and classes
- Update integration tests for new service structure
- Add new test utilities and helper classes
- Improve test data management and cleanup
- Update test resources and configuration files

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -21,7 +21,7 @@ app.jpa.dialect=org.hibernate.dialect.H2Dialect
 app.jpa.show-sql=false
 app.jpa.format-sql=false
 app.jpa.use-sql-comments=false
-app.jpa.defer-datasource-initialization=true
+app.jpa.defer-datasource-initialization=false
 
 # Test JPA Properties
 app.jpa.properties.hibernate-format-sql=false
@@ -83,8 +83,8 @@ app.actuator.enabled=false
 app.actuator.endpoints=health
 app.actuator.base-path=/actuator
 app.actuator.expose-health-details=false
-app.actuator.show-details=never
-app.actuator.show-components=never
+app.actuator.show-details=false
+app.actuator.show-components=false
 
 # Test OpenAPI Configuration
 app.open-api.title=Finance Control API - Test
@@ -131,13 +131,12 @@ server.port=${app.server.port}
 server.servlet.context-path=${app.server.context-path}
 
 management.endpoints.web.exposure.include=${app.actuator.endpoints}
-management.endpoint.health.show-details=${app.actuator.expose-health-details}
+management.endpoint.health.show-details=NEVER
 management.endpoints.web.base-path=${app.actuator.base-path}
 
 # JWT Configuration (legacy)
 jwt.secret=${app.security.jwt.secret}
 jwt.expiration=${app.security.jwt.expiration-ms}
 
-# Security Configuration (disabled for tests)
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
+# Security Configuration for tests
 management.security.enabled=false
