chore: update .gitignore and remove obsolete scripts
- Add .cursorignore to .gitignore for better file management
- Remove deprecated scripts.mdc file to streamline project structure
- Update application.properties to enable JPA auditing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=finance-control
 # Bean Configuration
 spring.main.allow-bean-definition-overriding=true
 
+# Disable Spring Boot auto-configuration for JPA Auditing
+spring.data.jpa.repositories.enabled=true
+
 # Database Configuration
 app.database.url=${DB_URL}
 app.database.port=${DB_PORT}
@@ -88,8 +91,6 @@ app.actuator.enabled=${ACTUATOR_ENABLED:true}
 app.actuator.endpoints=${ACTUATOR_ENDPOINTS:health,info,metrics,env}
 app.actuator.base-path=${ACTUATOR_BASE_PATH:/actuator}
 app.actuator.expose-health-details=${ACTUATOR_EXPOSE_HEALTH_DETAILS:true}
-app.actuator.show-details=${ACTUATOR_SHOW_DETAILS:when-authorized}
-app.actuator.show-components=${ACTUATOR_SHOW_COMPONENTS:when-authorized}
 
 # OpenAPI Configuration
 app.open-api.title=${OPENAPI_TITLE:Finance Control API}
