--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,48 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+      # SonarQube database configuration
+      SONAR_DB_NAME: ${SONAR_DB_NAME}
+      SONAR_DB_USER: ${SONAR_DB_USER}
+      SONAR_DB_PASSWORD: ${SONAR_DB_PASSWORD}
     ports:
-      - "${DB_PORT}:5432"
+      - "${DB_PORT}"
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./docker/postgres-init-sonarqube.sh:/docker-entrypoint-initdb.d/postgres-init-sonarqube.sh
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME}"]
       interval: 10s
       timeout: 5s
       retries: 5
     restart: unless-stopped
+
+  # SonarQube service for code quality analysis
+  sonarqube:
+    image: sonarqube:10.4-community
+    environment:
+      SONAR_JDBC_URL: jdbc:postgresql://db:${DB_PORT}/${SONAR_DB_NAME}
+      SONAR_JDBC_USERNAME: ${SONAR_DB_USER}
+      SONAR_JDBC_PASSWORD: ${SONAR_DB_PASSWORD}
+      SONAR_WEB_PORT: ${SONAR_PORT}
+    ports:
+      - "${SONAR_PORT}"
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_logs:/opt/sonarqube/logs
+    depends_on:
+      db:
+        condition: service_healthy
+    profiles:
+      - sonarqube
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/api/system/status"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
 
   # Application service
   app:
@@ -226,3 +258,6 @@ services:
 volumes:
   pgdata:
   gradle-cache:
+  sonarqube_data:
+  sonarqube_extensions:
+  sonarqube_logs:
