chore(config): update environment and application configuration files

--- a/.env.example
+++ b/.env.example
@@ -161,3 +161,10 @@ POSTGRES_DB=finance_control
 # DOCKER NETWORK CONFIGURATION
 # =============================================================================
 DOCKER_NETWORK_NAME=finance-control-network
+
+# =============================================================================
+# SONARQUBE DATABASE CONFIGURATION
+# =============================================================================
+SONAR_DB_NAME=sonarqube
+SONAR_DB_USER=sonarqube
+SONAR_DB_PASSWORD=sonarqube
