--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=finance-control
 
-# Bean Configuration
-spring.main.allow-bean-definition-overriding=true
-
-# Disable Spring Boot auto-configuration for JPA Auditing
+# JPA Configuration
 spring.data.jpa.repositories.enabled=true
+spring.jpa.open-in-view=false
 
 # Database Configuration
 app.database.url=${DB_URL}
@@ -115,6 +113,9 @@ spring.datasource.url=${app.database.url}:${app.database.port}/${app.database.na
 spring.datasource.username=${app.database.username}
 spring.datasource.password=${app.database.password}
 spring.datasource.driver-class-name=${app.database.driver-class-name}
+
+# Bean definition override to resolve JPA auditing handler conflict
+spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.hibernate.ddl-auto=${app.jpa.hibernate-ddl-auto}
 spring.jpa.properties.hibernate.dialect=${app.jpa.dialect}
